Changes for Perl extension Padre-Plugin-Swarm
0.2	- unreleased
	- add different cursor styling to indicate the original owner's cursor
        - add ghost cursors in the editor margin showing where other remote editors cursors are
	- pod updates
	- first attempt at collaboration with bowtie from irc. (BRAMBLE)
	- first real 2-way co-operative editing capability
	- move to new Padre::Task api
	- add Swarm::Universe container for tools and transports
	- replace Wx::Socket and IO::Poll task transport with AnyEvent
0.11  - Fri Jul 29 11:32:24 EST 2011
        - adjustments to loading of Wx::Socket #1264.
0.1   - Thu Feb  3 13:46:14 EST 2011
	- fix Changes file
0.094 - Thu Feb  3 13:35:14 EST 2011
        - fix (1) bug causing crash when disabling plugin
	- convert multicast service to new Task API
	- add timestamps to chat window
	- fix JSON parsing in WxSocket transport
0.093 - Sat Feb 13 23:14:23  EST 2010
	- extend the plugin pod and chat pod
	- hackish keepalive on global transport wxsocket
	- fix wx flags on chat control to behave on win32
	- fix json decoding bug with large messages
	- make chat text font fixed-width
	- add tab completion of nickname in chat text entry
0.092 - Sat Feb 13 13:47:38 EST 2010
	- remove references to packages lost after refactor
	- skip compile tests without DISPLAY 
0.091 - Sat Feb 13 00:15:00 EST 2010
	- broken
0.09 - Fri Feb 12 23:45:11 EST 2010
	- refactor network parts into Transport::* 
	- more useful output returned from runme
	- prevent loopback of runme message type
	- prevent loopback of openme message type
	- add preferences dialog

0.08 - Fri Feb  5 
	- add pod - mostly TODO 
	- stop squatting in padre::wx namespace

0.07 - Sun Jan 17 19:48:09 EST 2010
	- allow document stealing
	- observe other swarm users open editor documents
	- hook editor_enable/disable and announce documents open/close
	- add swarm resource tree next to directory/project tree
	- remove deps on IO::Interface