@@ -1,5 +1,6 @@
 Changes for Perl extension Padre-Plugin-Swarm
 0.2	- unreleased
+        - add margin symbol for feedback/comment
 	- add different cursor styling to indicate the original owner's cursor
         - add ghost cursors in the editor margin showing where other remote editors cursors are
 	- pod updates
